[project]
name = "kanade-tokenizer"
version = "0.0.1"
description = "Kanade is a speech tokenizer that encodes speech into compact content tokens and global embeddings and decodes them back to mel spectrograms."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "huggingface_hub",
  "jsonargparse[signatures]",
  "numpy",
  "safetensors",
  "soundfile",
  "torch",
  "torchaudio",
  "tqdm",
  "vocos",
]

[project.optional-dependencies]
train = [
  "einops",
  "lightning",
  "matplotlib",
  "tensorboard",
  "wandb",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
torch = [{ index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchaudio = [{ index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.ruff]
line-length = 120
